Colaboratory kullanılarak oluşturuldu

--- a/Temel_Veri_Bilimi.ipynb
+++ b/Temel_Veri_Bilimi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDzy/Vw8Hj10VyBrMNgvz6",
+      "authorship_tag": "ABX9TyO6MtTAjEMMwT+YIbNPg+ot",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "dosya_adı = \"/content/AB_NYC_2019.csv\"  # Yüklenen CSV dosyasının tam yolu\n",
+        "dosya_adı = \"AB_NYC_2019.csv\"  # Yüklenen CSV dosyasının tam yolu\n",
         "df = pd.read_csv(dosya_adı, delimiter= \",\", encoding=\"UTF-8\")\n",
         "sns.set(rc={\"figure.figsize\":(20,10)})"
       ]
@@ -47,7 +47,6 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv(\"AB_NYC_2019.csv\")\n",
         "df.head()"
       ],
       "metadata": {
